--- a/Relatório/Semana-1/0-Capa/capa.tex
+++ b/Relatório/Semana-1/0-Capa/capa.tex
@@ -24,7 +24,7 @@
     {\Large  Pedro Peverari Di Lallo  - 792328}\\
     \vspace*{.3cm}
     {\Large \textbf{Professor:}}
-    {\Large Dr. Victor Claudio Bento de Camargo}\\
+    {\Large Rafael Ferro Munhoz Arantes}\\
 \end{flushright}
 \vspace*{\fill}
 {\large \bf SÃO CARLOS / 2023}
