--- a/Relatório/Semana-1/1-Introdução/introducao.tex
+++ b/Relatório/Semana-1/1-Introdução/introducao.tex
@@ -1,3 +1,37 @@
-A indústria de transporte desempenha um papel vital na economia global, garantindo o fluxo de mercadorias e serviços. As transportadoras enfrentam desafios operacionais, logísticos e econômicos complexos, que exigem abordagens inovadoras para aprimorar suas atividades e se manterem competitivas em um mercado em constante evolução. A Engenharia de Produção, com sua abordagem sistêmica e conhecimentos multidisciplinares em Pesquisa Operacional, Logística, Economia e Computação, destaca-se como uma disciplina capaz de enfrentar esses desafios por meio da construção de um sistema de informações.
 
-Um sistema de informações bem projetado e implementado desempenha um papel crucial na resolução de problemas em uma transportadora. Ele consiste em uma infraestrutura tecnológica e processos organizacionais para coletar, armazenar, processar e disseminar informações relevantes em tempo real. Para isso será necessária a coleta sistemática de dados precisos sobre todas as atividades da transportadora, como roteirização, tempos de entrega, desempenho de motoristas e custos operacionais. Esses dados fornecem uma visão completa das operações, identificando gargalos, pontos de ineficiência e áreas que requerem melhorias.
+O setor de turismo apresenta grande potencial para otimização. Esse potencial deriva, sobretudo, do fato de que uma grande parte dessa indústria é baseada no estabelecimento de rotas. Dessa maneira, é possível aproximar, por exemplo, o planejamento de roteiros turísticos a problemas clássicos da pesquisa operacional, como o problema do caixeiro viajante e suas variações.
+
+Nesse sentido, o “modelo” de problema com o qual mais se encaixa essa operação é o OPTW, ou “Problema de Orientação com Janelas de Tempo” (Gonçalves, V. A., et al, 2017) ou com coleta de prêmios. Entretanto, porque e em qual direção precisariam ser otimizadas rotas turísticas? Na máxima satisfação do cliente para um mínimo custo a ele. Para ilustrar o problema basta pensar em um caixeiro que visita atrações dentro de limites e intervalos de tempo, recebe um nível de satisfação em cada uma.
+
+Outras interpretações possíveis para o problema são o PTPPP (Profitable Tour Problem with Priority Prizes), sugerido por Morabito (et al., 2014), como colocado por Silva  (et al, 2018). No entanto, ainda seria preciso considerar os horizonteis temporais caso essa seja a interpretação mais consistente do problema. Nesta situação, a ordem de visitação também importaria para os prêmios.
+
+Algumas considerações, no entanto, são importantíssimas para a aplicação desse pensamento ao planejamento de roteiros turísticos. A primeira delas é que uma viagem raramente é planejada para apenas um dia. Esse comentário é especialmente verdadeiro para regiões com muitas atrações: imagine conhecer Roma, por exemplo, em apenas algumas horas. Não seria possível, e nem satisfatório ao turista.
+
+A segunda é que, além de ter que retornar à um galpão, ou aeroporto, ou um ponto inicial semelhante, o turista precisa voltar à hotéis para que descanse. Dependendo a extensão do roteiro, porém, este hotel não é necessariamente sempre o mesmo, ao contrário do ponto inicial.
+
+Outro ponto importante é que as atrações não podem ser visitadas em qualquer período do dia - alguns pontos turísticos podem só funcionar pela manhã, por exemplo. Além disso, é necessário que o viajante faça pausas para almoço e tenha horários livres. Quanto aos horários de almoço, vale salientar que os restaurantes certamente apresentarão restrições temporais, além de acrescentarem aos custos da rota. 
+
+A representação completa do problema, então, é uma implementação multiperíodo do problema do caixeiro viajante lucrativo com restrições temporais, orçamentárias e espaciais. Nessa situação, o caixeiro (ou, simplesmente, viajante) sai de um galpão (aeroporto, rodoviária, entre outros), passa por um hotel, visita atrações (cada qual com seu horário de funcionamento e tempo de visita), paga por elas e recebe um prêmio de satisfação por isso. Esse prêmio será incialmente medido em unidades monetárias e representaria o preço máximo pelo qual o turista pagaria por aquela atração. Além de visitar atrações, o viajante deve também se alimentar em um restaurante no meio do dia e voltar à um hotel ao final dele. No dia seguinte, ele visitará mais atrações e estará disposto às mesmas restrições. Por fim, o caixeiro precisa retornar ao depósito (aeroporto ou rodoviária) e a viagem (ou roteiro) estará completa(o).
+
+O projeto se justifica, sobretudo, no interesse dos atores econômicos no turismo e dos stakeholders desta área. Afinal, a Organização Mundial do Turismo (UNWTO, 2014) “estima que atividades de turismo são diretamente responsáveis por 6%-8% dos trabalhos gerados no mundo todo” (SILVA; MORABITO; PUREZA, 2018). 
+
+Além disso, há uma grande quantidade de artigos sobre o tema de otimização de roteiros turísticos, mas a maioria deles tem enfoque no aspecto da coleta de dados para o planejamento de roteiros turísticos (SILVA; MORABITO; PUREZA, 2018). Um artigo (SILVA; MORABITO; PUREZA, 2018), foca no quesito das otimizações desses roteiros, contudo, no modelo construído não foi feita uma otimização multiperíodo.
+
+Outro ponto importante a ser considerado é a retomada das atividades turísticas no mundo, setor especialmente prejudicado pela pandemia da COVID-19. Segundo a Organização Mundial do Turismo, por exemplo, em 2021 a indústria perdeu US\$2 trilhões devido à doença (OMT, 2021). Nessa situação, é esperado que mais pessoas voltem, ou comecem, a viajar e, dessa maneira, o planejamento de itinerários de turismo se torna mais importante. No entanto, ainda segundo a OMT, é esperado que a recuperação do setor seja frágil e lenta (OMT, 2021), mas que ainda seria possível em 2022 (OMT, 2022), com a recuperação plena devendo ocorrer apenas em 2024, ou mais tarde (OMT, 2022).
+
+Com isso, o fornecimento de uma ferramenta que ajude as empresas e outros atores do setor a criar rotas ótimas, ou perto disso, certamente apresenta espaço em um setor em recuperação. Afinal, com ela seria possível prover melhores experiências à clientes que retomam às viagens com altas expectativas e apresentar maior eficiência quanto aos custos. 
+
+\subsection{Justificativa para o Desenvolvimento de um Sistema de Informação para Otimização de Roteiros Turísticos}
+
+O setor de turismo, conhecido por sua contribuição significativa à economia global, enfrenta desafios complexos relacionados ao planejamento de roteiros turísticos que garantam a satisfação dos clientes e a eficiência operacional. Com a base conceitual fundamentada em Pesquisa Operacional, o presente projeto tem como objetivo desenvolver um Sistema de Informação inovador e abrangente, capaz de lidar com a complexidade inerente aos itinerários de viagem e proporcionar experiências altamente satisfatórias aos turistas.
+
+\subsubsection{Satisfação dos Clientes e Experiências Satisfatórias:}
+A satisfação dos clientes é um fator crucial no setor de turismo, uma vez que clientes satisfeitos tendem a se tornar clientes fiéis e propagadores de boas experiências, o que contribui para a reputação positiva de destinos turísticos e empresas do setor. O planejamento de roteiros turísticos que atendam às expectativas dos viajantes é essencial para garantir experiências enriquecedoras, com visitas bem-sucedidas a atrações, respeito aos horários de funcionamento, intervalos adequados para alimentação e descanso, e uma sequência lógica de atividades que otimizem o tempo disponível. O Sistema de Informação proposto visa alcançar esses objetivos, oferecendo itinerários personalizados e eficientes, capazes de proporcionar aos turistas vivências memoráveis e agradáveis.
+
+\subsubsection{Benefícios para o Setor de Turismo:}
+A indústria do turismo é uma das principais fontes de emprego e receitas em muitos países ao redor do mundo. Nesse contexto, um sistema que facilite a criação de roteiros turísticos otimizados traz vantagens significativas para o setor. Empresas de turismo, agências de viagens e outros atores envolvidos podem se beneficiar com itinerários mais eficientes, reduzindo custos operacionais e aumentando a satisfação dos clientes. Além disso, o desenvolvimento desse sistema de informação também pode atrair mais turistas, uma vez que destinos que oferecem experiências de viagem bem planejadas e gratificantes tendem a se destacar no mercado, atraindo um maior número de visitantes e impulsionando o crescimento econômico regional.
+
+\subsubsection{Complexidade do Projeto:}
+O planejamento de roteiros turísticos apresenta desafios intrincados e multifacetados. Os itinerários devem levar em consideração diversas restrições temporais, como horários de funcionamento das atrações e intervalos de tempo para pausas e descanso, bem como limitações orçamentárias e espaciais. Além disso, a natureza multiperíodo do problema, com a necessidade de retorno ao ponto de partida e às acomodações noturnas, aumenta ainda mais a complexidade do projeto. O uso de técnicas de Pesquisa Operacional, como o problema do caixeiro viajante com janelas de tempo e coleta de prêmios, é fundamental para abordar essa problemática. O Sistema de Informação em desenvolvimento tem o objetivo de resolver eficientemente essas questões complexas, proporcionando soluções ótimas ou próximas disso, e facilitando a criação de roteiros turísticos que atendam às necessidades e desejos dos clientes.
+
+Em conclusão, o desenvolvimento do Sistema de Informação para Otimização de Roteiros Turísticos se justifica pela busca em proporcionar experiências satisfatórias aos clientes do setor de turismo, aumentar a eficiência operacional e contribuir para o crescimento econômico do setor. Através da aplicação de conceitos da Pesquisa Operacional, esse sistema pretende enfrentar a complexidade inerente ao planejamento de itinerários de viagem, oferecendo soluções eficazes que garantam a satisfação dos turistas e a competitividade das empresas e destinos turísticos no cenário global.
