--- a/Relatório/Semana-1/2-Descrição-detalhada/descricao.tex
+++ b/Relatório/Semana-1/2-Descrição-detalhada/descricao.tex
@@ -1,15 +1,30 @@
-A indústria de transporte desempenha um papel vital na economia global, sendo a espinha dorsal que garante o fluxo contínuo de mercadorias e serviços em todo o mundo. No entanto, essa indústria enfrenta desafios complexos e multifacetados que afetam sua eficiência e competitividade. Problemas relacionados às operações logísticas, como o planejamento de rotas, a gestão de estoques e a coordenação de entregas, tornam-se ainda mais desafiadores em um cenário de constante evolução tecnológica e exigências crescentes dos clientes.
+A indústria do turismo desempenha um papel significativo na economia global, proporcionando experiências únicas e enriquecedoras aos viajantes. No entanto, essa indústria também enfrenta desafios complexos relacionados ao planejamento de roteiros turísticos, que afetam diretamente a satisfação dos clientes e a eficiência operacional das empresas. Problemas como a falta de otimização das rotas, a falta de informações centralizadas e a ausência de uma visão holística das operações podem levar a itinerários ineficientes, insatisfação dos turistas e, por consequência, impactar negativamente a reputação das empresas do setor.
 
-Além disso, questões econômicas também desempenham um papel crítico. As transportadoras enfrentam pressões para reduzir custos operacionais, ao mesmo tempo em que precisam oferecer serviços de qualidade e atender às demandas específicas dos clientes. A falta de controle adequado dos custos e receitas pode levar a margens de lucro apertadas e afetar negativamente a saúde financeira da empresa.
+Nesse contexto, o sistema de informação proposto surge como uma solução estratégica e inovadora para enfrentar os desafios específicos do planejamento de roteiros turísticos. A abordagem busca integrar de forma sinérgica conhecimentos e técnicas que permitam às empresas do setor coletar, processar e utilizar informações relevantes para a criação de itinerários altamente satisfatórios e eficientes.
 
-Nesse contexto, o sistema de informações proposto, baseado na abordagem sistêmica e conhecimentos multidisciplinares da Engenharia de Produção, surge como uma solução estratégica e inovadora para enfrentar esses desafios. Através da integração de Pesquisa Operacional, Logística, Economia e Computação, o sistema busca criar uma plataforma que permita à transportadora coletar, armazenar, processar e disseminar informações relevantes em tempo real.
+A compreensão das necessidades e preferências dos clientes é fundamental para criar experiências turísticas sob medida. A coleta de dados detalhados sobre as atrações, horários de funcionamento, tempo de visita e níveis de satisfação dos turistas fornece uma base sólida para o planejamento de roteiros otimizados. A utilização de modelos de Pesquisa Operacional, como o Problema de Orientação com Janelas de Tempo (OPTW) ou o Problema de Caixeiro Viajante Lucrativo com Restrições Temporais e Orçamentárias, permitirá a criação de algoritmos eficazes para resolver esses problemas complexos, garantindo a sequência lógica e eficiente das atividades turísticas.
 
-A compreensão dos processos existentes é fundamental para identificar os gargalos e ineficiências no fluxo de trabalho. A coleta e análise de dados precisos sobre todas as atividades da transportadora, como roteirização, tempos de entrega, desempenho de motoristas e custos operacionais, fornecem uma visão completa das operações. Isso possibilita a identificação de áreas que requerem melhorias, a otimização das rotas de transporte e o controle eficiente dos estoques.
+Um dos principais desafios é a centralização e integração das informações. Com a utilização de um sistema de informações, as empresas poderão ter uma visão holística das operações, permitindo uma coordenação eficiente entre os diversos atores envolvidos, como hotéis, restaurantes e atrações turísticas. Isso possibilitará a sincronização das atividades e a criação de itinerários personalizados, considerando as restrições temporais e orçamentárias dos clientes, ao mesmo tempo em que maximiza a satisfação com a experiência turística.
 
-Um dos pontos problemáticos é a falta de informações centralizadas e integradas. Com múltiplos sistemas e fontes de dados, a tomada de decisões pode ser dificultada e a coordenação entre departamentos pode ser prejudicada. A ausência de uma visão holística das operações pode resultar em decisões subótimas e redundâncias no processo.
+Outro aspecto crucial é a necessidade de melhorar a satisfação do cliente ao longo de toda a jornada. O sistema de informação permitirá o monitoramento em tempo real das atividades dos turistas, fornecendo informações atualizadas sobre as atrações visitadas, horários disponíveis, pausas para refeições e intervalos para descanso. Além disso, a coleta de feedback dos clientes após cada visita permitirá avaliar a qualidade dos serviços prestados e realizar ajustes para aprimorar continuamente a experiência do turista.
 
-Outro desafio é a necessidade de melhorar a satisfação do cliente e fornecer uma experiência positiva ao longo de toda a jornada. Acompanhar o status das entregas, fornecer informações em tempo real e permitir que os clientes avaliem o serviço são aspectos cruciais para construir confiança e fidelidade com a base de clientes.
+Com isso, podemos estabelecer, já, os atores envolvidos no sistema. São eles:
 
-Diante desses desafios, a solução proposta tem como objetivo aumentar a eficiência operacional da transportadora, aprimorar a gestão de estoques, centralizar e integrar informações, otimizar a roteirização e aumentar a satisfação do cliente. O sistema de informações permitirá o compartilhamento transparente de dados entre os diferentes atores envolvidos, possibilitando a colaboração e a coordenação eficiente das atividades.
+\subsection{Clientes:} 
+Os clientes são os principais usuários do sistema. Eles interagem com o sistema para acessar informações sobre atrações turísticas, horários de funcionamento, custos de visitação e outros detalhes relevantes para planejar suas viagens. Além disso, os clientes fornecem feedback sobre suas experiências, o que é essencial para aprimorar o sistema e garantir a satisfação do cliente a longo prazo. O intuito é que os clientes forneçam apenas as cidades que querem visitar e recebam a rota otimizada para aquela localidade.
 
-Ao implementar esse sistema, a transportadora terá uma visão mais precisa e abrangente de suas operações, possibilitando a identificação de oportunidades de melhoria e a adoção de estratégias mais eficazes. Isso resultará em processos mais eficientes, entregas mais rápidas, redução de custos operacionais e, ao mesmo tempo, o aumento da satisfação dos clientes.
+\subsection{API do Google sobre as cidades:} 
+A API do Google sobre as cidades é um agente externo ao sistema, que fornece informações valiosas sobre as cidades e atrações turísticas. Essa API pode incluir dados como pontos turísticos, hotéis, restaurantes, horários de funcionamento, informações geográficas e muito mais. A integração dessa API no sistema permite que os usuários acessem informações atualizadas e detalhadas sobre os destinos turísticos, contribuindo para a precisão e relevância dos roteiros gerados.
+
+\subsection{Sistema de Otimização:} 
+O sistema de otimização é o núcleo do sistema de informação. Ele utiliza técnicas de Pesquisa Operacional, como o Problema do Caixeiro Viajante Lucrativo com Restrições Temporais e Orçamentárias, para criar itinerários turísticos eficientes e satisfatórios. O sistema de otimização analisa os dados fornecidos pela API do Google sobre as cidades, juntamente com as preferências e restrições dos clientes, para criar roteiros personalizados que atendam às necessidades e desejos dos viajantes.
+
+\subsection{Sistema de Busca na API:} 
+O sistema de busca na API é responsável por recuperar informações específicas dos destinos turísticos a partir dos dados fornecidos pela API do Google. Ele atua como uma interface entre o sistema de otimização e as informações relevantes para os roteiros turísticos. Essa integração é fundamental para garantir que o sistema de otimização tenha acesso a dados atualizados e precisos sobre as atrações turísticas, possibilitando a geração de roteiros otimizados e relevantes.
+
+\subsection{Administrador do Sistema:} 
+O administrador do sistema é um agente humano responsável por gerenciar e supervisionar o funcionamento do sistema como um todo. Ele atua como um ponto central de controle, garantindo que o sistema esteja atualizado, seguro e funcionando adequadamente. O administrador é responsável por lidar com a manutenção do sistema, realizar atualizações, monitorar a segurança dos dados e fornecer suporte técnico aos usuários. Além disso, o administrador também pode realizar análises dos dados gerados pelo sistema para identificar oportunidades de melhoria e tomar decisões estratégicas para aprimorar a eficiência e a qualidade dos serviços oferecidos pelo sistema.
+
+\subsection{Sistema de Feedback:}
+
+O sistema de feedback desempenha um papel crucial no processo de comunicação entre os clientes e o administrador do sistema. Ele atua como um agente intermediário que coleta e organiza os feedbacks dos clientes e armazena dados sobre as rotas e sua eficência, fornecendo informações valiosas para o administrador tomar decisões informadas e realizar melhorias contínuas nos serviços oferecidos.
