--- a/Relatório/Semana-1/3-Levantamento-de-Requisitos/requisitos.tex
+++ b/Relatório/Semana-1/3-Levantamento-de-Requisitos/requisitos.tex
@@ -1,77 +1,31 @@
 \subsection{Análise de Requisitos}
 
-\subsubsection{Atender e Registrar Pedidos dos Clientes}
 
-O requisito de "Atender e Registrar Pedidos dos Clientes" é essencial para o funcionamento da transportadora, permitindo que os clientes façam pedidos e que essas solicitações sejam registradas no sistema. O ator envolvido é o cliente, que interage com o caso de uso "Receber Pedidos dos Clientes", enviando suas demandas por meio de um aplicativo ou plataforma online. O sistema, por sua vez, recebe esses pedidos, armazena as informações relevantes e os encaminha para processamento posterior. O registro adequado dos pedidos é crucial para a organização das demandas, possibilitando uma gestão mais eficiente das entregas e garantindo a satisfação dos clientes ao atender suas necessidades de forma precisa e oportuna.
+\subsubsection{Cadastro de Novos Clientes}
+O sistema deve proporcionar uma interface de cadastro de novos clientes, onde os usuários possam preencher informações pessoais, como nome, endereço de e-mail e preferências de viagem. Essas preferências incluem as cidades ou atrações turísticas que eles desejam visitar durante sua viagem. O cadastro é essencial para personalizar os roteiros de acordo com as escolhas individuais de cada cliente, oferecendo uma experiência turística mais adequada às suas expectativas.
 
-\subsubsection{Permitir Ordens de Pedido dos Fornecedores}
+\subsubsection{Receber Cidades ou Atrações de Interesse dos Clientes}
+Após o cadastro, o sistema permite que os clientes selecionem as cidades ou atrações turísticas que mais lhes interessam. Eles podem indicar os pontos turísticos específicos que desejam visitar, bem como as atividades ou eventos que gostariam de incluir em seus roteiros. Essa funcionalidade permite que os clientes expressem suas preferências de forma clara, tornando possível a criação de roteiros personalizados e alinhados com seus interesses individuais.
 
-O requisito de "Permitir Ordens de Pedido dos Fornecedores" busca assegurar o suprimento adequado de materiais e produtos essenciais para a operação da transportadora. Os fornecedores são os atores envolvidos, interagindo com o caso de uso "Emitir Ordens de Pedido aos Fornecedores". O sistema gera e envia eletronicamente as ordens de pedido, estabelecendo formalmente a solicitação de compra. A emissão de ordens de pedido é uma etapa crítica no controle da cadeia de suprimentos, permitindo que a transportadora mantenha um histórico organizado de suas transações comerciais com os fornecedores, garantindo a disponibilidade dos materiais e evitando problemas de estoque.
+\subsubsection{Acessar a API do Google para Coletar Dados sobre as Cidades}
+Para fornecer informações detalhadas sobre as cidades e atrações turísticas selecionadas pelos clientes, o sistema integra-se à API do Google ou a outras fontes confiáveis de dados. Por meio dessa API, o sistema pode obter dados relevantes, como horários de funcionamento, avaliações, endereços e descrições detalhadas dos pontos turísticos. A coleta dessas informações é fundamental para a criação de roteiros precisos e bem informados.
 
-\subsubsection{Cadastrar Fornecedores}
+\subsubsection{Formatar e Computar os Dados Adquiridos}
+Os dados obtidos da API do Google precisam ser tratados e formatados adequadamente para que possam ser usados no processo de otimização de rotas. As informações coletadas devem ser armazenadas em uma estrutura de dados apropriada, facilitando sua manipulação e utilização pelo sistema durante o processo de criação de roteiros turísticos otimizados.
 
-O requisito de "Cadastrar Fornecedores" visa permitir que a transportadora mantenha um registro detalhado e atualizado das informações de seus fornecedores. O ator envolvido é o funcionário, que interage com o caso de uso "Cadastrar Fornecedores" para inserir os dados dos fornecedores no sistema. O cadastro organizado dos fornecedores é crucial para uma gestão eficiente da cadeia de suprimentos, permitindo à transportadora ter acesso rápido e fácil às informações relevantes sobre seus parceiros de negócios, facilitando a comunicação e a negociação com essas entidades.
+\subsubsection{Otimizar Rotas}
+Uma das principais funcionalidades do sistema é a otimização das rotas turísticas. Com base nas cidades e atrações selecionadas pelos clientes, o sistema deve criar roteiros que maximizem a satisfação do cliente enquanto minimizam custos e tempo de deslocamento. Durante a otimização, o sistema considera restrições de tempo, horários de funcionamento das atrações e possíveis custos associados a cada visita.
 
-\subsubsection{Gerenciar Estoques}
+\subsubsection{Consultar Relatórios sobre as Rotas}
+O sistema deve gerar relatórios detalhados sobre as rotas otimizadas. Esses relatórios fornecem informações como a sequência de visitação das atrações, o tempo estimado de permanência em cada local, distâncias percorridas, custos totais e outras métricas relevantes. Os relatórios são úteis tanto para o cliente, que pode acompanhar seu itinerário, quanto para o administrador do sistema, que pode analisar o desempenho das rotas e realizar melhorias contínuas.
 
-O requisito de "Gerenciar Estoques" é essencial para garantir o adequado controle dos níveis de estoque da transportadora. O ator envolvido é o funcionário, que interage com o caso de uso "Atualizar Estoques", responsável por ajustar as quantidades de estoque com base nas movimentações de entrada e saída de mercadorias. O gerenciamento eficiente dos estoques é crucial para evitar faltas ou excessos, permitindo que a transportadora mantenha uma quantidade adequada de produtos disponíveis para atender a demanda dos clientes de forma ágil e eficaz.
+\subsubsection{Executar Pedidos de Otimização}
+O sistema permite que os clientes solicitem a otimização de suas rotas mesmo após a conclusão do roteiro inicial. Caso haja mudanças de planos ou novos interesses que surjam durante a viagem, o cliente pode solicitar uma nova otimização para seu roteiro. Essa flexibilidade garante que o cliente tenha a melhor experiência possível, adaptando seu itinerário de acordo com suas necessidades e desejos.
 
-\subsubsection{Auxiliar na Tomada de Decisões Logísticas}
+\subsubsection{Verificar Satisfação das Restrições}
+Durante o processo de otimização de rotas, o sistema verifica se as restrições impostas pelo cliente, como horários de funcionamento das atrações e intervalos de tempo disponíveis para visitação, são atendidas pelo roteiro otimizado. Caso alguma restrição não seja satisfeita, o sistema oferece alternativas ou ajusta o roteiro de forma adequada, assegurando que o cliente possa aproveitar ao máximo suas visitas e experiências turísticas.
 
-O requisito de "Auxiliar na Tomada de Decisões Logísticas" tem como objetivo fornecer informações relevantes para apoiar as decisões estratégicas e operacionais relacionadas à logística da transportadora. O ator envolvido é o funcionário, que interage com o caso de uso "Tomar Decisões Logísticas", que disponibiliza relatórios e dados relevantes para apoiar a tomada de decisões logísticas. A disponibilidade de informações precisas e atualizadas é essencial para a eficiência das operações logísticas, permitindo que a transportadora identifique oportunidades de otimização e reduza custos operacionais.
+\subsubsection{Registro de Rotas Já Otimizadas em uma Base de Dados}
+O sistema registra as rotas já otimizadas em uma base de dados para fins de histórico e análise. Esses registros permitem que o administrador e os clientes possam acessar roteiros previamente otimizados, evitando retrabalhos e facilitando a consulta de itinerários anteriores. Essa funcionalidade também permite que o sistema aprenda com experiências anteriores e refine suas estratégias de otimização com base em dados históricos, melhorando continuamente o serviço oferecido.
 
-\subsubsection{Integrar Multi CD’s}
-
-O requisito de "Integrar Multi CD’s" busca integrar os diversos Centros de Distribuição (CDs) da transportadora para coordenar e utilizar eficientemente os recursos disponíveis em diferentes locais. O ator envolvido é o Sistema de Roteirização, interagindo com os casos de uso "Verificar Capacidade do CD" e "Verificar Disponibilidade de Frota" para garantir a coordenação adequada das operações. A integração entre os CDs é crucial para a otimização da distribuição de produtos, permitindo que a transportadora acomode entregas de forma mais eficiente e reduza custos logísticos.
-
-\subsubsection{Emitir Notas Fiscais}
-
-O requisito de "Emitir Notas Fiscais" tem o propósito de documentar as transações comerciais realizadas pela
-
- transportadora. O ator envolvido é o funcionário, que interage com o caso de uso "Emitir Notas Fiscais", gerando os documentos fiscais para as transações realizadas. A emissão de notas fiscais é essencial para a conformidade legal e contábil da transportadora, garantindo a correta tributação das operações e o cumprimento das obrigações fiscais.
-
-\subsubsection{Emitir Relatórios de Capacidade e Operação}
-
-O requisito de "Emitir Relatórios de Capacidade e Operação" busca fornecer relatórios detalhados sobre a capacidade dos recursos da transportadora e o desempenho das operações. O ator envolvido é o Sistema de Roteirização, interagindo com o caso de uso "Emitir Relatórios de Utilização e de Operação", que gera os relatórios necessários para apresentar informações relevantes sobre a capacidade e o desempenho da operação logística. A disponibilidade desses relatórios é crucial para uma gestão eficiente da transportadora, permitindo que a empresa acompanhe o desempenho e identifique oportunidades de melhoria.
-
-\subsubsection{Controlar os Indicadores Financeiros da Empresa}
-
-O requisito de "Controlar os Indicadores Financeiros da Empresa" visa calcular e monitorar os indicadores financeiros relevantes para a transportadora. O ator envolvido é o Sistema Financeiro, que interage com o caso de uso "Calcular Indicadores", responsável por realizar os cálculos financeiros necessários. O controle adequado dos indicadores financeiros é essencial para a saúde financeira da transportadora, permitindo que a empresa tome decisões informadas e estratégicas para garantir a sustentabilidade e o crescimento do negócio.
-
-\subsubsection{Armazenar Dados sobre a Frota de Caminhões}
-
-O requisito de "Armazenar Dados sobre a Frota de Caminhões" tem o objetivo de manter um registro organizado dos dados da frota de caminhões da transportadora. O ator envolvido é o funcionário, que interage com o caso de uso "Cadastrar Funcionários e Administradores", onde também são inseridos os dados dos motoristas e da frota de caminhões. O armazenamento detalhado dos dados da frota é essencial para a gestão eficiente dos recursos e para garantir a manutenção adequada dos veículos, assegurando a disponibilidade e a confiabilidade dos caminhões para as operações de entrega.
-
-\subsubsection{Permitir Avaliação Pelos Clientes}
-
-O requisito de "Permitir Avaliação Pelos Clientes" tem o objetivo de permitir que os clientes avaliem os serviços prestados pela transportadora. O ator envolvido é o cliente, que interage com o caso de uso "Avaliar Serviço", fornecendo suas avaliações sobre o serviço recebido. A possibilidade de avaliação é fundamental para a satisfação dos clientes, permitindo que a transportadora obtenha feedback sobre a qualidade dos serviços e identifique oportunidades de melhoria para aprimorar a experiência do cliente.
-
-\subsubsection{Permitir que o Cliente Acompanhe o Produto}
-
-O requisito de "Permitir que o Cliente Acompanhe o Produto" visa oferecer aos clientes a possibilidade de acompanhar o status de suas entregas em tempo real. O ator envolvido é o cliente, que interage com o caso de uso "Acompanhar a Entrega", permitindo-lhes verificar o andamento das entregas e receber atualizações sobre o status de seus pedidos. Essa funcionalidade é essencial para aumentar a transparência e a confiança dos clientes na transportadora, proporcionando uma experiência de entrega mais satisfatória e garantindo que os clientes se sintam informados e envolvidos durante todo o processo.
-
-\subsection{Diagrama de Caso de Uso (DCU)}
-
-O Diagrama de Caso de Uso é uma poderosa ferramenta utilizada na Engenharia de Requisitos e no processo de análise e modelagem de sistemas de software. Essa representação gráfica tem como objetivo descrever de forma clara e detalhada as interações entre os atores e o sistema em questão, além de mapear as principais funcionalidades que o sistema oferece.
-
-No contexto do projeto proposto para a transportadora, o Diagrama de Caso de Uso desempenha um papel estratégico na comunicação com os stakeholders, na identificação dos atores envolvidos e na definição clara das funcionalidades essenciais para atender às necessidades dos usuários. Essa representação visual permite uma compreensão comum entre a equipe de desenvolvimento, gerentes, clientes e outras partes interessadas, alinhando expectativas e objetivos desde o início do projeto. Por isso, segue o Diagrama de Caso de Uso proposto para a transportadora na figura \ref{fig:DCU}:
-
-\begin{figure}[H]
-    \centering
-    \caption{Diagrama de Caso de Uso}
-    \label{fig:DCU}
-    \includegraphics[scale=0.29]{Diagramas/DCU.png}\\
-    \caption*{Fonte: Elaborado pelos autores}
-\end{figure}
-
-O Diagrama de Caso de Uso apresentado é uma representação visual que descreve de forma detalhada as interações entre os atores e o sistema proposto para a transportadora, oferecendo uma visão abrangente das funcionalidades do sistema e como elas se relacionam com os usuários e demais atores envolvidos.
-
-Os atores no diagrama são representados por ícones distintos, como "Clientes", "Administrador do Sistema", "Funcionários", "Fornecedores", "Motoristas", "Sistema de Pagamentos", "Sistema de Roteirização" e "Sistema Financeiro". Cada ator representa uma entidade externa ao sistema e desempenha um papel específico na interação com o sistema.
-
-As funcionalidades do sistema são representadas pelos casos de uso, que são elipses no diagrama. Cada caso de uso descreve uma ação ou funcionalidade que o sistema oferece e é identificado por um nome significativo. Os casos de uso são conectados aos atores relevantes por meio de linhas, mostrando as interações e comunicações entre os atores e o sistema.
-
-Por exemplo, o caso de uso "Receber Pedidos dos Clientes" é conectado ao ator "Clientes", indicando que os clientes interagem com o sistema para registrar seus pedidos. Isso pode envolver a utilização de um aplicativo ou plataforma online em que os clientes preencham os detalhes do pedido, como produtos desejados, endereço de entrega e informações de pagamento.
-
-Além disso, o diagrama também mostra as relações de inclusão e extensão entre os casos de uso. A relação de inclusão é representada por uma seta pontilhada e indica que um caso de uso inclui outro caso de uso. Por exemplo, o caso de uso "Calcular Rota Otimizada" está incluído em "Confirmar Pedido", o que significa que o cálculo da rota otimizada é uma etapa essencial no processo de confirmação do pedido.
-
-A relação de extensão é representada por uma seta tracejada e indica que um caso de uso estende outro caso de uso, ou seja, adiciona funcionalidades opcionais. Por exemplo, o caso de uso "Emitir Relatórios de Utilização e de Operação" estende o caso de uso "Registrar Histórico de Entregas", o que significa que, após o registro do histórico de entregas, o sistema pode fornecer a opção de gerar relatórios adicionais para análise e controle da operação.
+\subsection{Diagrama de Caso de Uso}
