--- a/Relatório/Semana-1/main.tex
+++ b/Relatório/Semana-1/main.tex
@@ -34,5 +34,7 @@
 \section{Levantamento de Requisitos}
 \input{3-Levantamento-de-Requisitos/requisitos.tex}
 
+\section{Referências}
+\input{4-referencias/referencias.tex}
 
 \end{document}
